tests/errors/test-type-inference-error.sac
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -b 6:swr
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>OUTPUT=`$(CALL_SAC2C) $< 2>&1`; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -E "^.*:[[:digit:]]+: error:$$" | $(GREP_COMMAND_OUTPUT) "" 2; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -F '  All instances of "main" contain type errors' | $(GREP_COMMAND_OUTPUT) "" 1; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -F "  Inferred type int[1]{0} should match declared type int" | $(GREP_COMMAND_OUTPUT) "" 1 ; <nlslash>


int main ()
{
  return [0];
}